--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "server": "nodemon app.js",
+        "dev": "concurrently \"npm start\" \"npm run server\""
     },
     "eslintConfig": {
         "extends": [
@@ -49,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "concurrently": "^8.2.0",
         "eslint-config-prettier": "^8.6.0",
         "prettier": "2.8.4"
     }
