--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "concurrently": "^8.2.0",
         "eslint-config-prettier": "^8.6.0",
         "prettier": "2.8.4"
     }
